More tweaks for dark mode

--- a/site/common/sh_style.css
+++ b/site/common/sh_style.css
@@ -1,20 +1,20 @@
 pre.sh_sourceCode {
-  color: black;
+  color: inherit;
   font-style: normal;
   font-weight: normal;
 }
 
-pre.sh_sourceCode .sh_keyword { color: blue; font-weight: bold; }           /* language keywords */
-pre.sh_sourceCode .sh_type { color: darkgreen; }                            /* basic types */
+pre.sh_sourceCode .sh_keyword { color: light-dark(darkslateblue, lightsteelblue); font-weight: bold; }           /* language keywords */
+pre.sh_sourceCode .sh_type { color: light-dark(darkgreen, darkseagreen); }                            /* basic types */
 pre.sh_sourceCode .sh_usertype { color: teal; }                             /* user defined types */
 pre.sh_sourceCode .sh_string { color: red; font-family: monospace; }        /* strings and chars */
 pre.sh_sourceCode .sh_regexp { color: orange; font-family: monospace; }     /* regular expressions */
 pre.sh_sourceCode .sh_specialchar { color: pink; font-family: monospace; }  /* e.g., \n, \t, \\ */
-pre.sh_sourceCode .sh_comment { color: brown; font-style: italic; }         /* comments */
-pre.sh_sourceCode .sh_number { color: purple; }                             /* literal numbers */
+pre.sh_sourceCode .sh_comment { color: light-dark(brown, darksalmon); font-style: italic; }         /* comments */
+pre.sh_sourceCode .sh_number { color: light-dark(purple, plum); }                             /* literal numbers */
 pre.sh_sourceCode .sh_preproc { color: darkblue; font-weight: bold; }       /* e.g., #include, import */
-pre.sh_sourceCode .sh_symbol { color: darkred; }                            /* e.g., <, >, + */
-pre.sh_sourceCode .sh_function { color: black; font-weight: bold; }         /* function calls and declarations */
+pre.sh_sourceCode .sh_symbol { color: light-dark(darkred, burlywood); }                            /* e.g., <, >, + */
+pre.sh_sourceCode .sh_function { color: inherit; font-weight: bold; }         /* function calls and declarations */
 pre.sh_sourceCode .sh_cbracket { color: red; }                              /* block brackets (e.g., {, }) */
 pre.sh_sourceCode .sh_todo { font-weight: bold; background-color: cyan; }   /* TODO and FIXME */
 
@@ -37,7 +37,7 @@ pre.sh_sourceCode .sh_time, pre.sh_sourceCode .sh_file { color: darkblue; font-w
 pre.sh_sourceCode .sh_ip, pre.sh_sourceCode .sh_name { color: darkgreen; }
 
 /* for Prolog, Perl... */
-pre.sh_sourceCode .sh_variable { color: darkgreen; }
+pre.sh_sourceCode .sh_variable { color: light-dark(darkgreen, darkseagreen); }
 
 /* for LaTeX */
 pre.sh_sourceCode .sh_italics { color: darkgreen; font-style: italic; }
