--- a/site/common/sh_style.css
+++ b/site/common/sh_style.css
@@ -1,65 +1,113 @@
-pre.sh_sourceCode {
-  color: inherit;
-  font-style: normal;
-  font-weight: normal;
+.sh_sourceCode {
+    color: inherit;
+    font-style: normal;
+    font-weight: normal;
+
+    /* language keywords */
+    .sh_keyword {
+        color: light-dark(darkslateblue, lightsteelblue);
+        font-weight: bold;
+    }
+    /* basic types */
+    .sh_type {
+        color: light-dark(darkgreen, darkseagreen);
+    }
+    /* user-defined types */
+    .sh_usertype {
+        color: teal;
+    }
+    /* strings and chars */
+    .sh_string {
+        color: light-dark(crimson, pink);
+    }
+    /* regular expressions */
+    .sh_regexp {
+        color: light-dark(sienna, blanchedalmond);
+    }
+    /* special characters, like \n, \t, \\ */
+    .sh_specialchar {
+        color: pink;
+    }
+    /* comments */
+    .sh_comment {
+        color: light-dark(brown, darksalmon);
+        font-style: italic;
+    }
+    /* literal numbers */
+    .sh_number {
+        color: light-dark(purple, plum);
+    }
+    /* preprocessor commands (#include, import) */
+    .sh_preproc {
+        color: darkblue;
+        font-weight: bold;
+    }
+    /* symbols (<, >, +) */
+    .sh_symbol {
+        color: light-dark(darkred, burlywood);
+    }
+    /* function class and declarations */
+    .sh_function {
+        color: inherit;
+        font-weight: bold;
+    }
+    /* block brackets */
+    .sh_cbracket {
+        color: red;
+    }
+    /* TODO and FIXME */
+    .sh_todo {
+        font-weight: bold;
+        background-color: cyan;
+    }
+    /* Predefined variables and functions */
+    .sh_predef_var {
+        color: darkblue;
+    }
+    .sh_predef_func {
+        color: darkblue;
+        font-weight: bold;
+    }
+    /* class names */
+    .sh_classname {
+        color: teal;
+    }
+    /* URLs */
+    .sh_url {
+        color: blue;
+        text-decoration: underline;
+    }
 }
 
-pre.sh_sourceCode .sh_keyword { color: light-dark(darkslateblue, lightsteelblue); font-weight: bold; }           /* language keywords */
-pre.sh_sourceCode .sh_type { color: light-dark(darkgreen, darkseagreen); }                            /* basic types */
-pre.sh_sourceCode .sh_usertype { color: teal; }                             /* user defined types */
-pre.sh_sourceCode .sh_string { color: red; font-family: monospace; }        /* strings and chars */
-pre.sh_sourceCode .sh_regexp { color: orange; font-family: monospace; }     /* regular expressions */
-pre.sh_sourceCode .sh_specialchar { color: pink; font-family: monospace; }  /* e.g., \n, \t, \\ */
-pre.sh_sourceCode .sh_comment { color: light-dark(brown, darksalmon); font-style: italic; }         /* comments */
-pre.sh_sourceCode .sh_number { color: light-dark(purple, plum); }                             /* literal numbers */
-pre.sh_sourceCode .sh_preproc { color: darkblue; font-weight: bold; }       /* e.g., #include, import */
-pre.sh_sourceCode .sh_symbol { color: light-dark(darkred, burlywood); }                            /* e.g., <, >, + */
-pre.sh_sourceCode .sh_function { color: inherit; font-weight: bold; }         /* function calls and declarations */
-pre.sh_sourceCode .sh_cbracket { color: red; }                              /* block brackets (e.g., {, }) */
-pre.sh_sourceCode .sh_todo { font-weight: bold; background-color: cyan; }   /* TODO and FIXME */
-
-/* Predefined variables and functions (for instance glsl) */
-pre.sh_sourceCode .sh_predef_var { color: darkblue; }
-pre.sh_sourceCode .sh_predef_func { color: darkblue; font-weight: bold; }
-
-/* for OOP */
-pre.sh_sourceCode .sh_classname { color: teal; }
-
-/* line numbers (not yet implemented) */
-pre.sh_sourceCode .sh_linenum { color: black; font-family: monospace; }
-
-/* Internet related */
-pre.sh_sourceCode .sh_url { color: blue; text-decoration: underline; font-family: monospace; }
-
 /* for ChangeLog and Log files */
-pre.sh_sourceCode .sh_date { color: blue; font-weight: bold; }
-pre.sh_sourceCode .sh_time, pre.sh_sourceCode .sh_file { color: darkblue; font-weight: bold; }
-pre.sh_sourceCode .sh_ip, pre.sh_sourceCode .sh_name { color: darkgreen; }
+.sh_sourceCode .sh_date { color: blue; font-weight: bold; }
+.sh_sourceCode .sh_time, pre.sh_sourceCode .sh_file { color: darkblue; font-weight: bold; }
+.sh_sourceCode .sh_ip, pre.sh_sourceCode .sh_name { color: darkgreen; }
 
 /* for Prolog, Perl... */
-pre.sh_sourceCode .sh_variable { color: light-dark(darkgreen, darkseagreen); }
+.sh_sourceCode .sh_variable { color: light-dark(darkgreen, darkseagreen); }
 
 /* for LaTeX */
-pre.sh_sourceCode .sh_italics { color: darkgreen; font-style: italic; }
-pre.sh_sourceCode .sh_bold { color: darkgreen; font-weight: bold; }
-pre.sh_sourceCode .sh_underline { color: darkgreen; text-decoration: underline; }
-pre.sh_sourceCode .sh_fixed { color: green; font-family: monospace; }
-pre.sh_sourceCode .sh_argument { color: darkgreen; }
-pre.sh_sourceCode .sh_optionalargument { color: purple; }
-pre.sh_sourceCode .sh_math { color: orange; }
-pre.sh_sourceCode .sh_bibtex { color: blue; }
+.sh_sourceCode .sh_italics { color: darkgreen; font-style: italic; }
+.sh_sourceCode .sh_bold { color: darkgreen; font-weight: bold; }
+.sh_sourceCode .sh_underline { color: darkgreen; text-decoration: underline; }
+.sh_sourceCode .sh_fixed { color: green; }
+.sh_sourceCode .sh_argument { color: darkgreen; }
+.sh_sourceCode .sh_optionalargument { color: purple; }
+.sh_sourceCode .sh_math { color: orange; }
+.sh_sourceCode .sh_bibtex { color: blue; }
 
 /* for diffs */
-pre.sh_sourceCode .sh_oldfile { color: orange; }
-pre.sh_sourceCode .sh_newfile { color: darkgreen; }
-pre.sh_sourceCode .sh_difflines { color: blue; }
+.sh_sourceCode .sh_oldfile { color: orange; }
+.sh_sourceCode .sh_newfile { color: darkgreen; }
+.sh_sourceCode .sh_difflines { color: blue; }
 
 /* for css */
-pre.sh_sourceCode .sh_selector { color: purple; }
-pre.sh_sourceCode .sh_property { color: blue; }
-pre.sh_sourceCode .sh_value { color: darkgreen; font-style: italic; }
+.sh_sourceCode .sh_selector { color: purple; }
+.sh_sourceCode .sh_property { color: blue; }
+.sh_sourceCode .sh_value { color: darkgreen; font-style: italic; }
 
 /* other */
-pre.sh_sourceCode .sh_section { color: black; font-weight: bold; }
-pre.sh_sourceCode .sh_paren { color: red; }
-pre.sh_sourceCode .sh_attribute { color: darkgreen; }
+.sh_sourceCode .sh_section { color: inherit; font-weight: bold; }
+.sh_sourceCode .sh_paren { color: red; }
+.sh_sourceCode .sh_attribute { color: darkgreen; }
