--- a/site/common/sh_style.css
+++ b/site/common/sh_style.css
@@ -39,7 +39,7 @@
     }
     /* preprocessor commands (#include, import) */
     .sh_preproc {
-        color: darkblue;
+        color: light-dark(darkblue,lightblue);
         font-weight: bold;
     }
     /* symbols (<, >, +) */
@@ -74,8 +74,7 @@
     }
     /* URLs */
     .sh_url {
-        color: blue;
-        text-decoration: underline;
+        color: var(--link-color);
     }
     /* Variable name */
     .sh_variable {
