Add admin interface for Bookmarks

--- a/templates/bookmark/bookmark.html
+++ b/templates/bookmark/bookmark.html
@@ -12,5 +12,5 @@
     <h1 class="p-name">
         {{ block('title') }}
     </h1>
-    {{ include('bookmark.twig') }}
+    {{ include('bookmark/single.twig') }}
 {% endblock %}
