--- a/templates/bookmark/single.twig
+++ b/templates/bookmark/single.twig
@@ -1,5 +1,5 @@
 {% import 'blog.twig' as blog %}
-<div class="h-entry" id="bookmark_{{ bookmark.ulid }}">
+<div class="h-entry" id="bookmark_{{ bookmark.id }}">
     <h2>
         <a class="u-bookmark-of h-cite" href="{{ bookmark.href }}">
             {{ bookmark.title }}
