--- a/templates/blog.twig
+++ b/templates/blog.twig
@@ -1,7 +1,7 @@
 {% macro date_format(dt) %}
   {% if dt | date('Y') == "now" | date('Y') %}
-    {{ dt | date('F j (l) g:ia') }}
+    {{ dt | date('l, F j @ g:ia') }}
   {% else %}
-    {{ dt | date('F j, Y g:ia') }}
+    {{ dt | date('l, F j, Y @ g:ia') }}
   {% endif %}
 {% endmacro %}
