--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,7 @@
     <h1>
       <a href="/">trained<b>monkey</b></a>
     </h1>
+    <p>by Jim Winstead Jr.
   </header>
 
   <div role="main" class="main-content">
