--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,12 +32,12 @@
 </ul>
 
 <div class="left-sidebar-grid">
-  <header>
-    <h1>
+  <hgroup>
+    <h2>
       <a href="/">trained<b>monkey</b></a>
-    </h1>
+    </h2>
     <p>by Jim Winstead Jr.
-  </header>
+  </hgroup>
 
   <div role="main" class="main-content">
     {% block content %}{% endblock %}
